# signal-system

./: .gitignore  CMakeLists.txt  README.org  build.sh
.cache/clangd/index/: dispatcher.cpp.B7CD084BB8AD8280.idx  dispatcher.h.DBD491E1CE2800BA.idx  entity.h.023566631FAE7FC6.idx  main.cpp.EE83A6725034B590.idx
src/: dispatcher.cpp  dispatcher.h  entity.h  main.cpp
